// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAvatar render TextAvatar 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 10,
        "fontWeight": "400",
        "lineHeight": 14,
        "minHeight": 14,
      },
      undefined,
    ]
  }
>
  ИП
</Text>
`;

exports[`TextAvatar render TextAvatar size L 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 18,
        "fontWeight": "400",
        "lineHeight": 22,
        "minHeight": 22,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;

exports[`TextAvatar render TextAvatar size M 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 14,
        "fontWeight": "400",
        "lineHeight": 18,
        "minHeight": 18,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;

exports[`TextAvatar render TextAvatar size S 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-Regular",
        "fontSize": 10,
        "fontWeight": "400",
        "lineHeight": 14,
        "minHeight": 14,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;

exports[`TextAvatar render TextAvatar size XL 1`] = `
<Text
  allowFontScaling={true}
  style={
    [
      {
        "color": "#FFFFFF",
        "fontFamily": "Inter-SemiBold",
        "fontSize": 22,
        "fontWeight": "600",
        "lineHeight": 24,
        "minHeight": 24,
      },
      undefined,
    ]
  }
>
  И
</Text>
`;
